[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/swipe-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Slash.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 18 )

[node name="Slash" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2( 23.1687, -2.97589 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20.5964, -1.40359 )
rotation = 2.30383
texture = ExtResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_Slash_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
